--- a/portada.tex
+++ b/portada.tex
@@ -18,9 +18,17 @@
         {\fontfamily{phv}\fontsize{20pt}{25pt}\selectfont
         Nombre del autor} \\[1cm]
 
-        % Carrera o Maestría
+        % Carrera o Maestría (comentar o descomentar la línea correspondiente)
         {\fontfamily{phv}\fontsize{15pt}{20pt}\selectfont
-        Carrera o Maestría} \\[2cm]
+        \textbf{Carrera de Especialización en Sistemas Embebidos}
+        % \textbf{Carrera de Especialización en Internet de las Cosas} \\
+        % \textbf{Carrera de Especialización en Inteligencia Artificial} \\
+        % \textbf{Maestría en Sistemas Embebidos} \\
+        % \textbf{Maestría en Internet de las Cosas} \\
+        % \textbf{Maestría en Inteligencia Artificial Embebida} \\
+        % \textbf{Maestría en Computación de Borde} \\
+        % \textbf{Maestría en Inteligencia Artificial} \\
+        } \\[2cm]
 
         % Director
         {\fontfamily{phv}\fontsize{11pt}{15pt}\selectfont
