preparando primer version, capitulo 1

--- a/portada.tex
+++ b/portada.tex
@@ -12,15 +12,15 @@
 
         % Título
         {\fontfamily{phv}\bfseries\fontsize{33pt}{40pt}\selectfont
-        Título del trabajo} \\[1.5cm]
+        Solución IoT para robot de exploración ambiental de datos críticos con almacenamiento en blockchain} \\[1.5cm]
 
         % Autor
         {\fontfamily{phv}\fontsize{20pt}{25pt}\selectfont
-        Nombre del autor} \\[1cm]
+        Gonzalo Carreño} \\[1cm]
 
         % Carrera o Maestría (comentar o descomentar la línea correspondiente)
         {\fontfamily{phv}\fontsize{15pt}{20pt}\selectfont
-        \textbf{Carrera de Especialización en Sistemas Embebidos}
+        \textbf{Carrera de Maestría en Internet de las Cosas}
         % \textbf{Carrera de Especialización en Internet de las Cosas} \\
         % \textbf{Carrera de Especialización en Inteligencia Artificial} \\
         % \textbf{Maestría en Sistemas Embebidos} \\
@@ -32,7 +32,7 @@
 
         % Director
         {\fontfamily{phv}\fontsize{11pt}{15pt}\selectfont
-        \textbf{Director:} Director (pertenencia)} \\[1cm]
+        \textbf{Director:} Esp. Ing. Sergio Alberino (UTN-FRBA)} \\[1cm]
 
         % Jurados
         {\fontfamily{phv}\fontsize{11pt}{15pt}\selectfont
