se agrega el resumen

--- a/memorianueva.tex
+++ b/memorianueva.tex
@@ -77,7 +77,9 @@
 
 \begin{abstract}
 \addchaptertocentry{\abstractname} % Agregar resumen al índice
-El resumen debe escribirse en uno o dos párrafos. Debe ser breve y conciso, sin ningún elemento de formato en el texto como itálicas o negritas. Tampoco se deben usar siglas ni acrónimos que no resulten obvios para un lector promedio de la memoria, ni referencias bibliográficas o notas al pie de página. No debe faltar qué es lo que se hizo/logró, qué importancia/valor tiene el proyecto/resultado, qué va a encontrar el lector en la memoria y qué contenidos de la especialización/maestría se aplicaron en el proyecto.
+En el presente trabajo se documenta la implementación de una solución de IoT (Internet de las Cosas) para un caso de uso hipotético de robot de exploración ambiental, en el que, debido a la criticidad de los datos, sea necesario garantizar la inmutabilidad y transparencia de su almacenamiento.
+La motivación del trabajo fue a modo de proyecto de interés personal pero se esperó con su implementación lograr una solución innovadora que combine un dispositivo robótico con una plataforma de almacenamiento blockchain. Para su implementación se utilizaron varios conceptos y conocimientos técnicos aprendidos en la carrera como por ejemplo el desarrollo de sistemas embebidos en ESP32, mensajeria MQTT, almacenamiento y procesamiento BigData, la implementación de soluciones cloud, entre otros.
+
 \end{abstract}
 
 %----------------------------------------------------------------------------------------
