se mejora el resumen

--- a/portada.tex
+++ b/portada.tex
@@ -16,7 +16,7 @@
 
         % Autor
         {\fontfamily{phv}\fontsize{20pt}{25pt}\selectfont
-        Gonzalo Carreño} \\[1cm]
+        Esp. Ing. Gonzalo Carreño} \\[1cm]
 
         % Carrera o Maestría (comentar o descomentar la línea correspondiente)
         {\fontfamily{phv}\fontsize{15pt}{20pt}\selectfont
