--- a/memorianueva.tex
+++ b/memorianueva.tex
@@ -77,7 +77,7 @@
 
 \begin{abstract}
 \addchaptertocentry{\abstractname} % Agregar resumen al índice
-En el presente trabajo se documenta la implementación de una solución de IoT (Internet de las Cosas) para un caso de uso hipotético de robot de exploración ambiental, en el que, debido a la criticidad de los datos, sea necesario garantizar la inmutabilidad y transparencia de su almacenamiento.
+En el presente trabajo se describe la implementación de una solución de IoT (Internet de las Cosas) para un caso de uso hipotético de robot de exploración ambiental, en el que, debido a la criticidad de los datos, sea necesario garantizar la inmutabilidad y transparencia de su almacenamiento.
 La motivación del trabajo fue a modo de proyecto de interés personal pero se esperó con su implementación lograr una solución innovadora que combine un dispositivo robótico con una plataforma de almacenamiento blockchain. Para su implementación se utilizaron varios conceptos y conocimientos técnicos aprendidos en la carrera como por ejemplo el desarrollo de sistemas embebidos en ESP32, mensajeria MQTT, almacenamiento y procesamiento BigData, la implementación de soluciones cloud, entre otros.
 
 \end{abstract}
