--- a/memorianueva.tex
+++ b/memorianueva.tex
@@ -77,10 +77,15 @@
 
 \begin{abstract}
 \addchaptertocentry{\abstractname} % Agregar resumen al índice
-En el presente trabajo se describe la implementación de una solución de IoT (Internet de las Cosas) para un caso de uso hipotético de robot de exploración ambiental, en el que, debido a la criticidad de los datos, sea necesario garantizar la inmutabilidad y transparencia de su almacenamiento.
-La motivación del trabajo fue a modo de proyecto de interés personal pero se esperó con su implementación lograr una solución innovadora que combine un dispositivo robótico con una plataforma de almacenamiento blockchain. Para su implementación se utilizaron varios conceptos y conocimientos técnicos aprendidos en la carrera como por ejemplo el desarrollo de sistemas embebidos en ESP32, mensajeria MQTT, almacenamiento y procesamiento BigData, la implementación de soluciones cloud, entre otros.
+El presente trabajo describe la implementación de un proyecto personal en el que se desarrolla una solución de IoT (Internet de las Cosas) para un caso de uso de robot de exploración ambiental en el que, debido a la criticidad de los datos, sea necesario garantizar la inmutabilidad y transparencia de su almacenamiento.
+
+El sistema cuenta con una arquitectura robusta y flexible en la que se integra el dispositivo robótico de exploración ambiental, desarrollado en el marco de la Carrera de Especialización de Sistemas Embebidos \citep{cese_gonzalo_memoria}, con un sistema \textit{backend} desplegado en la nube pública, y una red blockchain a fin de poder asegurar la inmutabilidad y transparencia de las lecturas ambientales. 
+
+Para su implementación se utilizaron conceptos y herramientas tales como el desarrollo de sistemas embebidos en ESP32 y FreeRTOS, mensajeria MQTT, almacenamiento y procesamiento BigData, la implementación de soluciones \textit{cloud}, entre otros.
 
 \end{abstract}
+
+
 
 %----------------------------------------------------------------------------------------
 % Agradecimientos
