--- a/memorianueva.tex
+++ b/memorianueva.tex
@@ -77,7 +77,7 @@
 
 \begin{abstract}
 \addchaptertocentry{\abstractname} % Agregar resumen al índice
-El presente trabajo describe la implementación de un proyecto personal en el que se desarrolla una solución de IoT (Internet de las Cosas) para un caso de uso de robot de exploración ambiental en el que, debido a la criticidad de los datos, sea necesario garantizar la inmutabilidad y transparencia de su almacenamiento.
+El presente trabajo describe la implementación de un proyecto personal en el que se desarrolla una solución de IoT (\textit{Internet of Things} o Internet de las Cosas) para un caso de uso de robot de exploración ambiental en el que, debido a la criticidad de los datos, sea necesario garantizar la inmutabilidad y transparencia de su almacenamiento.
 
 El sistema cuenta con una arquitectura robusta y flexible en la que se integra el dispositivo robótico de exploración ambiental, desarrollado en el marco de la Carrera de Especialización de Sistemas Embebidos \citep{cese_gonzalo_memoria}, con un sistema \textit{backend} desplegado en la nube pública, y una red blockchain a fin de poder asegurar la inmutabilidad y transparencia de las lecturas ambientales. 
 
