--- a/references.bib
+++ b/references.bib
@@ -1,27 +1,147 @@
 
-@book{IEEE:citation,
-	author={IEEE},
-	title={IEEE Citation Reference},
-	edition={1},
-	url={http://www.ieee.org/documents/ieeecitationref.pdf},
-	urldate={2016-9-26},
-	publisher={IEEE Publications},
-	year={2016}
+@online{ESP32,
+    author    = "Espressif",
+    title     = "ESP32",
+    url       = "https://www.espressif.com/en/products/socs/esp32",
+    keywords  = "latex,knuth"
 }
 
-@misc{CIAA,
-	author = {{Proyecto CIAA}},
-	title = {Computadora Industrial Abierta Argentina},
-	url = {http://proyecto-ciaa.com.ar/devwiki/doku.php?id=start},
-	note = {Visitado el 2016-06-25},
-	year = {2014}
+@online{ESPIDF_home,
+    author    = "Espressif",
+    title     = "ESP-IDF Programming Guide | Get Started",
+    url       = "https://docs.espressif.com/projects/esp-idf/en/latest/esp32/get-started/",
+    keywords  = "latex,knuth"
 }
+
+
+@online{FreeRTOS,
+    author    = "FreeRTOS",
+    title     = "FreeRTOS | Real-time operating system for microcontrollers and small microprocessors",
+    url       = "https://www.freertos.org/",
+    keywords  = "latex,knuth"
+}
+
+
+@online{mqtt_spec,
+    author    = "OASIS",
+    title     = "MQTT Protocol Specification",
+    url       = "https://mqtt.org/mqtt-specification/",
+    keywords  = "latex,knuth"
+}
+
+
+@online{blockchain,
+    author    = "Wikipedia",
+    title     = "Blockchain",
+    url       = "https://en.wikipedia.org/wiki/Blockchain",
+    keywords  = "latex,knuth"
+}
+
+
+@online{nube_publica,
+    author    = "Amazon Web Services",
+    title     = "¿Qué es una nube pública?",
+    url       = "https://aws.amazon.com/es/what-is/public-cloud/",
+    keywords  = "latex,knuth"
+}
+
+
+
+
+
 
 
 
 @online{cese_gonzalo_memoria,
     author    = "Esp. Ing. Gonzalo Carreño",
-    title     = "UBA/CESE - Robot de exploración ambiental",
-    url       = "https://github.com/kronleuchter85/cese_proyecto_especializacion/blob/main/docs/TTFB_Memoria_Gonzalo_Carreno.pdf",
+    title     = "LSE-FIUBA - Trabajo Final CESE- Robot de exploración ambiental",
+    url       = "https://lse-posgrados-files.fi.uba.ar/tesis/LSE-FIUBA-Trabajo-Final-CESE-Gonzalo-Carreno-2024.pdf",
     keywords  = "latex,knuth"
 }
+
+
+@online{espressif-website-esp-idf,
+    author    = "Espressif Programing Guide",
+    title     = "ESP-IDF Get Started",
+    url       = "https://docs.espressif.com/projects/esp-idf/en/latest/esp32/get-started/index.html",
+    keywords  = "latex,knuth"
+}
+
+@online{latam-mining-robot-minero-unsj,
+    author    = "Latam Mining",
+    title     = "Robots y minería: Gobierno argentino quiere implementarlos",
+    url       = "https://www.latam-mining.com/robots-y-mineria-gobierno-argentino-quiere-implementarlos/",
+    keywords  = "latex,knuth"
+}
+
+@online{diario-de-cuyo-prototipo-robotico,
+    author    = "Diario de Cuyo",
+    title     = "Gobierno pone la mira en el desarrollo de robots para la actividad minera",
+    url       = "https://www.diariodecuyo.com.ar/politica/Gobierno-pone-la-mira-en-el-desarrollo-de-robots-para-la-actividad-minera-20200202-0052.html",
+    keywords  = "latex,knuth"
+}
+
+@online{comunicacion-unsj-prototipo-convenio,
+    author    = "Universidad Nacional de San Juan",
+    title     = "Robots en la minería",
+    url       = "http://www.unsj.edu.ar/home/noticias_detalles/4810/1",
+    keywords  = "latex,knuth"
+}
+
+
+
+@online{geobot,
+    author    = "Ing. Nelson Dario García Hurtado e Ing. Melvin Andrés González Pino",
+    title     = "Robot de exploración terrestre Geobot",
+    url       = "https://www.unipamplona.edu.co/unipamplona/portalIG/home_40/recursos/01_general/revista_1/09102011/v01_09.pdf",
+    keywords  = "latex,knuth"
+}
+
+@online{min-sis,
+    author    = "Ing. Hernán L. Helguero Velásquez1 e Ing. Rubén Medinaceli Tórrez",
+    title     = "Robot Minero: Sistema Detector de Gases utilizando Sensores en Tiempo Real MIN – SIS 1.0 SDG-STR",
+    url       = "http://www.scielo.org.bo/scielo.php?script=sci_arttext&pid=S2519-53522020000100003",
+    keywords  = "latex,knuth"
+}
+
+@online{spot,
+    author    = "Boston Dynamics",
+    title     = "Spot",
+    url       = "https://www.bostondynamics.com/products/spot",
+    keywords  = "latex,knuth"
+}
+
+@online{bike_inspection,
+    author    = "Waygate Technologies",
+    title     = "BIKE - An advanced crawler robot for remote visual inspection",
+    url       = "https://www.bakerhughes.com/waygate-technologies/robotic-inspection/bike",
+    keywords  = "latex,knuth"
+}
+
+
+
+@online{iot_usecase_seg_china,
+    author    = "As.com | Marc Fontrodona",
+    title     = "Una estación de esquí china despliega una patrulla de perros robot",
+    url       = "https://as.com/deportes_accion/snow/una-estacion-de-esqui-china-despliega-una-patrulla-de-perros-robot-n",
+    keywords  = "latex,knuth"
+}
+@online{iot_usecase_bilbao,
+    author    = "Cadenaser.com | Radio Bilbao",
+    title     = "Bilbao inspecciona sus redes de saneamiento con drones y robots para mejorar la eficiencia y la seguridad",
+    url       = "https://cadenaser.com/euskadi/2024/12/18/bilbao-inspecciona-sus-redes-de-saneamiento-con-drones-y-robots-para-mejorar-la-eficiencia-y-la-seguridad-radio-bilbao/",
+    keywords  = "latex,knuth"
+}
+
+@online{iot_usecase_cuenca,
+    author    = "Los40.com | Dani Cabezas",
+    title     = "Así se gestiona un “tecnobosque”",
+    url       = "https://los40.com/2024/12/10/asi-se-gestiona-un-tecnobosque/",
+    keywords  = "latex,knuth"
+}
+
+
+
+
+
+
