--- a/memorianueva.tex
+++ b/memorianueva.tex
@@ -79,9 +79,9 @@
 \addchaptertocentry{\abstractname} % Agregar resumen al índice
 El presente trabajo describe la implementación de un proyecto personal en el que se desarrolla una solución de IoT (\textit{Internet of Things} o Internet de las Cosas) para un caso de uso de robot de exploración ambiental en el que, debido a la criticidad de los datos, sea necesario garantizar la inmutabilidad y transparencia de su almacenamiento.
 
-El sistema cuenta con una arquitectura robusta y flexible en la que se integra el dispositivo robótico de exploración ambiental, desarrollado en el marco de la Carrera de Especialización de Sistemas Embebidos \citep{cese_gonzalo_memoria}, con un sistema \textit{backend} desplegado en la nube pública, y una red blockchain a fin de poder asegurar la inmutabilidad y transparencia de las lecturas ambientales. 
+El sistema cuenta con una arquitectura robusta y flexible en la que se integra el dispositivo robótico de exploración ambiental \citep{cese_gonzalo_memoria} desarrollado en el marco de la Carrera de Especialización de Sistemas Embebidos, con un sistema \textit{back-end} desplegado en la nube pública \citep{nube_publica}, y una red Blockchain \cite{blockchain} a fin de poder asegurar la inmutabilidad y transparencia de las lecturas ambientales. 
 
-Para su implementación se utilizaron conceptos y herramientas tales como el desarrollo de sistemas embebidos en ESP32 y FreeRTOS, mensajeria MQTT, almacenamiento y procesamiento BigData, la implementación de soluciones \textit{cloud}, entre otros.
+Para su implementación se utilizaron conceptos y herramientas tales como el desarrollo de sistemas embebidos en ESP32 \citep{ESP32} y FreeRTOS \citep{FreeRTOS} usando ESP-IDF \citep{ESPIDF_home}, mensajeria MQTT \citep{mqtt_spec}, almacenamiento y procesamiento \textit{BigData}, la implementación de soluciones \textit{cloud}, entre otros.
 
 \end{abstract}
 
@@ -91,10 +91,10 @@ Para su implementación se utilizaron conceptos y herramientas tales como el des
 % Agradecimientos
 %----------------------------------------------------------------------------------------
 
-\begin{acknowledgements}
-\vspace{1.5cm}
-Esta sección es para agradecimientos personales y es totalmente \textbf{OPCIONAL}.
-\end{acknowledgements}
+%- \begin{acknowledgements}
+%- \vspace{1.5cm}
+%- Esta sección es para agradecimientos personales y es totalmente \textbf{OPCIONAL}.
+%- \end{acknowledgements}
 
 %----------------------------------------------------------------------------------------
 % Índice
@@ -108,7 +108,7 @@ Esta sección es para agradecimientos personales y es totalmente \textbf{OPCIONA
 % Dedicatoria
 %----------------------------------------------------------------------------------------
 
-\dedicatory{\textbf{Dedicado a... [OPCIONAL]}}
+%- \dedicatory{\textbf{Dedicado a... [OPCIONAL]}}
 
 %----------------------------------------------------------------------------------------
 % Capítulos
