agregando parte del capitulo 2

--- a/references.bib
+++ b/references.bib
@@ -46,10 +46,121 @@
 }
 
 
+@online{web2_vs_web3,
+    author    = "Emily Shwake",
+    title     = "Web2 vs. Web3: What is the difference?",
+    url       = "https://www.wix.com/blog/web2-vs-web3",
+    keywords  = "latex,knuth"
+}
+
+
+@online{truffle_website,
+    author    = "Truffle Suite",
+    title     = "Truffle | What is Truffle?",
+    url       = "https://archive.trufflesuite.com/docs/truffle/",
+    keywords  = "latex,knuth"
+}
+
+@online{ganache_website,
+    author    = "Truffle Suite",
+    title     = "Ganache | One click blockchain",
+    url       = "https://archive.trufflesuite.com/ganache/",
+    keywords  = "latex,knuth"
+}
+
+@online{alchemy_website,
+    author    = "Alchemy",
+    title     = "Alchemy | The most reliable way to build web3 apps",
+    url       = "https://www.alchemy.com/",
+    keywords  = "latex,knuth"
+}
+@online{alchemy_tec_doc,
+    author    = "Alchemy",
+    title     = "Alchemy | API Reference Overview",
+    url       = "https://docs.alchemy.com/reference/api-overview",
+    keywords  = "latex,knuth"
+}
+
+
+@online{etherscan,
+    author    = "Etherscan",
+    title     = "Etherscan",
+    url       = "https://etherscan.io/",
+    keywords  = "latex,knuth"
+}
+
+
+@online{etherscan,
+    author    = "Metamask",
+    title     = "Metamask | Your home in Web3",
+    url       = "https://metamask.io/",
+    keywords  = "latex,knuth"
+}
+
+@online{solidity,
+    author    = "soliditylang.org",
+    title     = "Solidity programming language",
+    url       = "https://soliditylang.org/",
+    keywords  = "latex,knuth"
+}
+
+@online{ethereum,
+    author    = "Ethereum.org",
+    title     = "Welcome to Ethereum",
+    url       = "https://ethereum.org/en/",
+    keywords  = "latex,knuth"
+}
 
 
 
 
+
+
+
+
+@online{esp_idf_lib_website,
+    author    = "Readthedocs by Ruslan V. Uss",
+    title     = "ESP-IDF Components library",
+    url       = "https://esp-idf-lib.readthedocs.io/en/latest/",
+    keywords  = "latex,knuth"
+}
+
+
+
+@online{vscode_website,
+    author    = "Visualstudio",
+    title     = "Visualstudio Code",
+    url       = "https://code.visualstudio.com/",
+    keywords  = "latex,knuth"
+}
+
+@online{ninja_website,
+    author    = "CMake",
+    title     = "Ninja",
+    url       = "https://cmake.org/cmake/help/latest/generator/Ninja.html",
+    keywords  = "latex,knuth"
+}
+
+@online{cmake_website,
+    author    = "CMake",
+    title     = "CMake",
+    url       = "https://cmake.org/",
+    keywords  = "latex,knuth"
+}
+
+@online{docker_website,
+    author    = "Docker",
+    title     = "Docker",
+    url       = "https://docker.com/",
+    keywords  = "latex,knuth"
+}
+
+@online{ubuntu_website,
+    author    = "Ubuntu",
+    title     = "Ubuntu",
+    url       = "https://ubuntu.com/",
+    keywords  = "latex,knuth"
+}
 
 
 @online{cese_gonzalo_memoria,
