agregando parte del capitulo 2

--- a/references.bib
+++ b/references.bib
@@ -1,4 +1,31 @@
 
+
+
+
+@online{wifi,
+    author    = "Wikipedia",
+    title     = "Wi-Fi",
+    url       = "https://es.wikipedia.org/wiki/Wifi",
+    keywords  = "latex,knuth"
+}
+
+@online{g5,
+    author    = "Wikipedia",
+    title     = "5G",
+    url       = "https://es.wikipedia.org/wiki/5G",
+    keywords  = "latex,knuth"
+}
+
+
+@online{lorawan,
+    author    = "Wikipedia",
+    title     = "LoraWAN",
+    url       = "https://es.wikipedia.org/wiki/LoRaWAN",
+    keywords  = "latex,knuth"
+}
+
+
+
 @online{ESP32,
     author    = "Espressif",
     title     = "ESP32",
@@ -46,6 +73,25 @@
 }
 
 
+@online{smart_contracts,
+    author    = "Wikipedia",
+    title     = "Smart Contracts",
+    url       = "https://en.wikipedia.org/wiki/Smart_contract",
+    keywords  = "latex,knuth"
+}
+
+
+@online{dapp,
+    author    = "Wikipedia",
+    title     = "DApp - Decentralized Application",
+    url       = "https://en.wikipedia.org/wiki/Decentralized_application",
+    keywords  = "latex,knuth"
+}
+
+
+
+
+
 @online{web2_vs_web3,
     author    = "Emily Shwake",
     title     = "Web2 vs. Web3: What is the difference?",
@@ -90,7 +136,7 @@
 }
 
 
-@online{etherscan,
+@online{metamask,
     author    = "Metamask",
     title     = "Metamask | Your home in Web3",
     url       = "https://metamask.io/",
@@ -107,7 +153,7 @@
 @online{ethereum,
     author    = "Ethereum.org",
     title     = "Welcome to Ethereum",
-    url       = "https://ethereum.org/en/",
+    url       = "https://ethereum.org/",
     keywords  = "latex,knuth"
 }
 
@@ -126,6 +172,27 @@
 }
 
 
+
+
+@online{SoftwareTool_codePipeline,
+    author    = "Amazon Web Services",
+    title     = "AWS CodePipeline",
+    url       = "https://aws.amazon.com/codepipeline/",
+    keywords  = "latex,knuth"
+}
+@online{SoftwareTool_ECR,
+    author    = "Amazon Web Services",
+    title     = "AWS Elastic Container Registry",
+    url       = "https://aws.amazon.com/ecr/",
+    keywords  = "latex,knuth"
+}
+
+@online{SoftwareTool_Github,
+    author    = "Github",
+    title     = "Github",
+    url       = "https://github.com/",
+    keywords  = "latex,knuth"
+}
 
 @online{vscode_website,
     author    = "Visualstudio",
