segunda entrega - capitulo 2

--- a/references.bib
+++ b/references.bib
@@ -1,6 +1,35 @@
 
+@online{azure_iot,
+    author    = "Azure",
+    title     = "Azure IoT Hub",
+    url       = "https://azure.microsoft.com/en-gb/products/iot-hub",
+    keywords  = "latex,knuth"
+}
 
 
+
+
+
+@online{Bluetooth,
+    author    = "Wikipedia",
+    title     = "Bluetooth",
+    url       = "https://en.wikipedia.org/wiki/Bluetooth",
+    keywords  = "latex,knuth"
+}
+
+@online{zigbee,
+    author    = "Wikipedia",
+    title     = "Zigbee",
+    url       = "https://en.wikipedia.org/wiki/Zigbee",
+    keywords  = "latex,knuth"
+}
+
+@online{Narrowband_IoT,
+    author    = "Wikipedia",
+    title     = "Narrowband IoT",
+    url       = "https://en.wikipedia.org/wiki/Narrowband_IoT",
+    keywords  = "latex,knuth"
+}
 
 @online{wifi,
     author    = "Wikipedia",
@@ -9,7 +38,7 @@
     keywords  = "latex,knuth"
 }
 
-@online{g5,
+@online{5g,
     author    = "Wikipedia",
     title     = "5G",
     url       = "https://es.wikipedia.org/wiki/5G",
@@ -91,6 +120,19 @@
 
 
 
+@online{PoS,
+    author    = "Wikipedia",
+    title     = "Proof of Stake",
+    url       = "https://en.wikipedia.org/wiki/Proof_of_stake",
+    keywords  = "latex,knuth"
+}
+
+@online{PoW,
+    author    = "Wikipedia",
+    title     = "Proof of Work",
+    url       = "https://en.wikipedia.org/wiki/Proof_of_work",
+    keywords  = "latex,knuth"
+}
 
 @online{web2_vs_web3,
     author    = "Emily Shwake",
@@ -99,6 +141,42 @@
     keywords  = "latex,knuth"
 }
 
+@online{web3,
+    author    = "Web3.js",
+    title     = "Web3.js - Ethereum JavaScript API",
+    url       = "https://web3js.readthedocs.io/en/v1.10.0/",
+    keywords  = "latex,knuth"
+}
+@online{abi,
+    author    = "Soliditylang.org",
+    title     = "Contract ABI Specification",
+    url       = "https://docs.soliditylang.org/en/latest/abi-spec.html",
+    keywords  = "latex,knuth"
+}
+
+
+
+
+@online{mainnet,
+    author    = "Truffle Suite",
+    title     = "Truffle | What is Truffle?",
+    url       = "https://etherscan.io/",
+    keywords  = "latex,knuth"
+}
+
+@online{sepolia,
+    author    = "Truffle Suite",
+    title     = "Truffle | What is Truffle?",
+    url       = "https://sepolia.etherscan.io/",
+    keywords  = "latex,knuth"
+}
+
+@online{holesky,
+    author    = "Truffle Suite",
+    title     = "Truffle | What is Truffle?",
+    url       = "https://holesky.etherscan.io/",
+    keywords  = "latex,knuth"
+}
 
 @online{truffle_website,
     author    = "Truffle Suite",
@@ -158,8 +236,53 @@
 }
 
 
+@online{nodejs,
+    author    = "Node.js",
+    title     = "Node.js",
+    url       = "https://nodejs.org/en",
+    keywords  = "latex,knuth"
+}
+
+@online{aws_athena,
+    author    = "Amazon Web Service",
+    title     = "AWS Athena",
+    url       = "https://aws.amazon.com/athena/",
+    keywords  = "latex,knuth"
+}
+@online{aws_iot_core,
+    author    = "Amazon Web Service",
+    title     = "AWS Athena",
+    url       = "https://aws.amazon.com/iot-core/",
+    keywords  = "latex,knuth"
+}
+@online{aws_app_runner,
+    author    = "Amazon Web Service",
+    title     = "AWS Athena",
+    url       = "https://aws.amazon.com/apprunner/",
+    keywords  = "latex,knuth"
+}
+@online{aws_s3,
+    author    = "Amazon Web Service",
+    title     = "AWS Athena",
+    url       = "https://aws.amazon.com/s3/",
+    keywords  = "latex,knuth"
+}
+@online{aws,
+    author    = "Amazon Web Service",
+    title     = "Amazon Web Service",
+    url       = "https://aws.amazon.com/",
+    keywords  = "latex,knuth"
+}
 
 
+
+
+@online{aws_glue,
+    author    = "Amazon Web Service",
+    title     = "AWS Glue",
+    url       = "https://aws.amazon.com/glue/",
+    keywords  = "latex,knuth"
+}
 
 
 
@@ -319,7 +442,42 @@
 }
 
 
+@online{iot_usecase_blockchain_1,
+    author    = "Cadenaser.com | Radio Sevilla",
+    title     = "Lidl refuerza su compromiso con la transparencia e innovación en el sector oleícola al lanzar Primera Cosecha, un AOVE con tecnología blockchain",
+    url       = "https://cadenaser.com/andalucia/2025/03/10/lidl-refuerza-su-compromiso-con-la-transparencia-e-innovacion-en-el-sector-oleicola-al-lanzar-primera-cosecha-un-aove-con-tecnologia-blockchain-radio-sevilla/",
+    keywords  = "latex,knuth"
+}
 
 
+@online{iot_usecase_blockchain_2,
+    author    = "Cadenaser.com | Radio Sevilla",
+    title     = "Lidl refuerza su compromiso con la transparencia e innovación en el sector oleícola al lanzar Primera Cosecha, un AOVE con tecnología blockchain",
+    url       = "https://cadenaser.com/aragon/2024/11/12/acf-innove-presentara-sus-proyectos-mas-innovadores-en-el-sie-huesca-radio-huesca/",
+    keywords  = "latex,knuth"
+}
+
+
+@online{iot_usecase_blockchain_walmart,
+    author    = "Walmart | Global Tech",
+    title     = "Blockchain in the food supply chain - What does the future look like?",
+    url       = "https://tech.walmart.com/content/walmart-global-tech/en_us/blog/post/blockchain-in-the-food-supply-chain.html?utm_source=chatgpt.com",
+    keywords  = "latex,knuth"
+}
+
+
+@online{iot_usecase_blockchain_saltoki,
+    author    = "Interempresas | Julio Lema, Paula Eiroa",
+    title     = "Mejorar la eficiencia energética con IoT y blockchain",
+    url       = "https://www.interempresas.net/Energia/Articulos/446423-Mejorar-la-eficiencia-energetica-con-IoT-y-blockhain.html",
+    keywords  = "latex,knuth"
+}
+
+@online{iot_usecase_blockchain_scantrust,
+    author    = "ledgerinsights | Nicky Morris",
+    title     = "ScanTrust’s anti-counterfeit solution isn’t just about blockchain",
+    url       = "https://www.ledgerinsights.com/scantrust-anti-counterfeit-blockchain/",
+    keywords  = "latex,knuth"
+}
 
 
