--- a/portada.tex
+++ b/portada.tex
@@ -46,6 +46,6 @@
 
         % Fecha y lugar
         {\fontfamily{phv}\itshape\fontsize{10pt}{12pt}\selectfont
-        Ciudad de [lugar], [mes] de [año]} % Ejemplo: Ciudad de Córdoba, junio de 2025
+        Ciudad de Buenos Aires, Abril de 2025} % Ejemplo: Ciudad de Córdoba, junio de 2025
     \end{flushright}
 \end{titlepage}
