--- a/memorianueva.tex
+++ b/memorianueva.tex
@@ -77,7 +77,7 @@
 
 \begin{abstract}
 \addchaptertocentry{\abstractname} % Agregar resumen al índice
-El presente trabajo describe la implementación de un proyecto personal en el que se desarrolla una solución de Internet de las Cosas para un caso de uso de robot de exploración ambiental capaz de garantizar la inmutabilidad y transparencia de los datos. 
+En este trabajo se presenta la implementación de un proyecto personal que consiste en el desarrollo de una solución de Internet de las Cosas aplicada a un robot de exploración ambiental. Las implementación asegurar la inmutabilidad y transparencia de los datos obtenidos por el robot.
 
 Para su implementación se utilizaron conceptos y herramientas tales como el desarrollo de sistemas embebidos, mensajería asincrónica, almacenamiento y procesamiento distribuido en la nube, entre otros.
 
