--- a/references.bib
+++ b/references.bib
@@ -8,6 +8,12 @@
 
 
 
+@online{evm,
+    author    = "Wthereum.org",
+    title     = "Ethereum Virtual Machine (EVM)",
+    url       = "https://ethereum.org/en/developers/docs/evm/",
+    keywords  = "latex,knuth"
+}
 
 
 @online{Bluetooth,
