--- a/portada.tex
+++ b/portada.tex
@@ -8,12 +8,12 @@
     % Contenido principal
     \begin{flushright}
         \setlength{\rightskip}{-2cm} % Ajusta la sangría derecha
-        \vspace*{7.5cm} % Ajustar según la posición vertical deseada
+        \vspace*{4.5cm} % Ajustar según la posición vertical deseada
 
         % Título
         {\fontfamily{phv}\bfseries\fontsize{33pt}{40pt}\selectfont
         Solución IoT para robot de exploración ambiental de datos críticos con almacenamiento en blockchain} \\[1.5cm]
-
+		\vspace*{1cm}
         % Autor
         {\fontfamily{phv}\fontsize{20pt}{25pt}\selectfont
         Esp. Ing. Gonzalo Carreño} \\[1cm]
@@ -46,6 +46,6 @@
 
         % Fecha y lugar
         {\fontfamily{phv}\itshape\fontsize{10pt}{12pt}\selectfont
-        Ciudad de Buenos Aires, Abril de 2025} % Ejemplo: Ciudad de Córdoba, junio de 2025
+        Ciudad de Buenos Aires, abril de 2025} % Ejemplo: Ciudad de Córdoba, junio de 2025
     \end{flushright}
 \end{titlepage}
