--- a/references.bib
+++ b/references.bib
@@ -486,4 +486,12 @@
     keywords  = "latex,knuth"
 }
 
+@online{sntp,
+    author    = "IBM Documentation",
+    title     = "Simple Network Time Protocol",
+    url       = "https://www.ibm.com/docs/en/i/7.4.0?topic=services-simple-network-time-protocol",
+    keywords  = "latex,knuth"
+}
+
+
 
