--- a/references.bib
+++ b/references.bib
@@ -493,5 +493,11 @@
     keywords  = "latex,knuth"
 }
 
+@online{google_faucets,
+    author    = "Google",
+    title     = "Google Cloud Web3",
+    url       = "https://cloud.google.com/application/web3/faucet",
+    keywords  = "latex,knuth"
+}
 
 
