agregando alchemy, detalles de la dapp y ms fabric

--- a/references.bib
+++ b/references.bib
@@ -500,4 +500,10 @@
     keywords  = "latex,knuth"
 }
 
+@online{open_api,
+    author    = "swagger.io",
+    title     = "Open API Specification",
+    url       = "https://swagger.io/specification/",
+    keywords  = "latex,knuth"
+}
 
